--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 MONGO_URI="mongodb+srv://skarabaychick:admin@cluster0.1sroy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT=3000
 JWT_SECRET=13fjskk3l45l5k322
+MAILTRAP_USER=61142aa30fccad
+MAILTRAP_PASS=7922c510ec56be
+MAILTRAP_HOST=sandbox.smtp.mailtrap.io
+MAILTRAP_PORT=2525
+BASE_URL=http://localhost:3000/api
