--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "mkdir functions\\build && copyfiles config/** controllers/** middleware/** models/** routes.js server.js .env chess-online-bca59-firebase-adminsdk-zt8tv-c673d17c6b.json functions/build",
+    "deploy": "cd functions && firebase deploy --only functions"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +18,18 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
+    "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.1"
+    "mongoose": "^8.6.1",
+    "nodemailer": "^6.9.16",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
+    "copyfiles": "^2.4.1",
     "nodemon": "^3.1.4"
   }
 }
