--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MONGO_URI="mongodb+srv://skarabaychick:admin@cluster0.1sroy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT=3000
+BASE_URL=http://localhost:3000
 JWT_SECRET=13fjskk3l45l5k322
 MAILTRAP_USER=f3ffcb49b171ba
 MAILTRAP_PASS=71e6b33d78638d
