--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "express-validator": "^7.2.0",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
