--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "chess-school-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "engines": {
   "node": ">=18.0.0"
 },
 "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
