--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ MAILTRAP_PASS=71e6b33d78638d
 MAILTRAP_HOST=sandbox.smtp.mailtrap.io
 MAILTRAP_PORT=2525
 BASE_URL=http://localhost:3000/api
+Pass= vuui yzyu wgny srne
+NODE_ENV=development
