--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "server.js",
   "engines": {
-  "node": ">=18.0.0"
-},
-"scripts": {
+    "node": ">=18.0.0"
+  },
+  "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -22,6 +22,9 @@
     "express-validator": "^7.2.0",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
+    "i18next": "^25.3.2",
+    "i18next-fs-backend": "^2.6.0",
+    "i18next-http-middleware": "^3.7.4",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
